Edges added but unknown node is added

--- a/design.html
+++ b/design.html
@@ -7,8 +7,9 @@
     <script src="p5.js"></script>
     <script src="sketch.js"></script>
     <script src="node.js"></script>
+    <script src="edge.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <title>Dijkstra</title>
 </head>
 <body>
 </body>
