--- a/design.html
+++ b/design.html
@@ -8,6 +8,7 @@
     <script src="sketch.js"></script>
     <script src="node.js"></script>
     <script src="edge.js"></script>
+    <script src="graph.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Dijkstra</title>
 </head>
